Fix sector indicator link alignment

--- a/src/components/Framework/Framework.scss
+++ b/src/components/Framework/Framework.scss
@@ -111,7 +111,9 @@
                                     display: -webkit-inline-box;
                                     border: 1px solid black;
                                     width: 20px;
-                                    height: 15px;
+                                    height: 20px;
+                                    margin-top: 5px;
+                                    margin-bottom: 5px;
                                     .status-1 {
                                         width: 50%;
                                         height: 100%;
@@ -134,6 +136,8 @@
                                 a {
                                     color: #555;
                                     text-decoration: none;
+                                    vertical-align: baseline;
+                                    line-height: 1.4;
                                 }
                             }
                         }
